--- a/image/image_classification_logistic_kmeans.ipynb
+++ b/image/image_classification_logistic_kmeans.ipynb
@@ -22,12 +22,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-12-03T00:51:28.213360Z",
      "start_time": "2025-12-03T00:51:27.981234Z"
     }
    },
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -42,9 +44,7 @@
     "import cv2\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n"
-   ],
-   "outputs": [],
-   "execution_count": 1
+   ]
   },
   {
    "cell_type": "markdown",
@@ -55,28 +55,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-12-03T00:51:32.896634Z",
      "start_time": "2025-12-03T00:51:31.491678Z"
     }
    },
-   "source": [
-    "# Load training data\n",
-    "print(\"Loading training data...\")\n",
-    "train_df = pd.read_csv('Data/train.csv')\n",
-    "\n",
-    "# Check the structure\n",
-    "print(f\"Training data shape: {train_df.shape}\")\n",
-    "print(f\"Columns: {train_df.columns.tolist()}\")\n",
-    "print(f\"\\nFirst few rows:\")\n",
-    "print(train_df.head())\n",
-    "\n",
-    "# Check unique emotion classes\n",
-    "unique_emotions = sorted(train_df['emotion'].unique())\n",
-    "print(f\"\\nUnique emotion classes: {unique_emotions}\")\n",
-    "print(f\"Number of classes: {len(unique_emotions)}\")\n"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -99,7 +84,22 @@
      ]
     }
    ],
-   "execution_count": 2
+   "source": [
+    "# Load training data\n",
+    "print(\"Loading training data...\")\n",
+    "train_df = pd.read_csv('Data/train.csv')\n",
+    "\n",
+    "# Check the structure\n",
+    "print(f\"Training data shape: {train_df.shape}\")\n",
+    "print(f\"Columns: {train_df.columns.tolist()}\")\n",
+    "print(f\"\\nFirst few rows:\")\n",
+    "print(train_df.head())\n",
+    "\n",
+    "# Check unique emotion classes\n",
+    "unique_emotions = sorted(train_df['emotion'].unique())\n",
+    "print(f\"\\nUnique emotion classes: {unique_emotions}\")\n",
+    "print(f\"Number of classes: {len(unique_emotions)}\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2569,13 +2569,13 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "name": "python"
-  },
-  "kernelspec": {
-   "name": "python3",
-   "language": "python",
-   "display_name": "Python 3 (ipykernel)"
   }
  },
  "nbformat": 4,
